# scaffold-ai

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  cli.sh  devcontainer-feature.json  install.sh  justfile  scaffold.py
.github/workflows/: release.yml
config/: agents.yml  config.default.yaml  mcp.wikictl.json  paths.yml  prompts.yml  skills.yml
config/claude/: hooks.json  settings.json  settings.local.json  statusline.sh
config/copilot/: config.json
content/: agents.scaffold-ai.md  paths.yml
content/agents/: developer.md  marketing-strategist.md  metadata.yml  tech-consultant.md
content/prompts/: metadata.yml
content/skills/: metadata.yml
content/skills/agent-creator/: SKILL.md
content/skills/caveman/: SKILL.md
content/skills/copilot-agent-creator/: SKILL.md
content/skills/copilot-skill-creator/: SKILL.md
content/skills/developer-docker/: SKILL.md
content/skills/developer-framework-astro/: SKILL.md
wikictl/: .gitignore  README.md  pyproject.toml
wikictl/src/wikictl/: __init__.py  cli.py  core.py  frontmatter.py  logging.py  models.py
wikictl/src/wikictl/server/: __init__.py  mcp.py  middleware.py  routes_api.py  routes_html.py
wikictl/src/wikictl/server/templates/: base.html  entry.html  index.html  mcp_info.html
wikictl/src/wikictl/tests/e2e/: test_cli.py  test_serve.py
wikictl/src/wikictl/tests/unit/: test_cli_logging.py  test_core.py  test_core_logging.py  test_frontmatter.py  test_logging.py  test_mcp_logging.py  test_models.py  test_server_api.py  test_server_html.py  test_server_middleware.py
(+28 files in other folders)
