[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikictl"
version = "0.1.0"
description = "A file-based memory layer for AI agents using progressive disclosure"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.1",
    "python-frontmatter>=1.1",
    "structlog>=24.1",
]

[project.scripts]
wikictl = "wikictl.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "httpx>=0.27",
]
serve = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "fastmcp>=2.0",
    "gunicorn>=23.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["src/wikictl/tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/wikictl"]
exclude = ["src/wikictl/bundled_skills"]
